# rtniow

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker.sh
src/: CMakeLists.txt  main.cpp
src/types/: CMakeLists.txt  color.h  ray.h  utils.h  vec.h
test/unit/: CMakeLists.txt
test/unit/types/: ray.cpp  to_string.h  vec.cpp
toolchain/: clang-10.cmake
